--- a/docs/docs/llms/rag/index.mdx
+++ b/docs/docs/llms/rag/index.mdx
@@ -38,6 +38,7 @@ only more accurate but also more trustworthy, paving the way for a new era of AI
 
 ## Explore RAG Tutorials
 
-<Link className="button button--primary" to="notebooks">
+<a className="button button--primary" href="https://github.com/mlflow/mlflow/tree/master/docs/docs/llms/rag/notebooks" target="_blank" rel="noopener noreferrer">
   <span>View RAG Tutorials</span>
-</Link>
+</a>
+
