--- a/docs/docs/tracing/api/how-to.mdx
+++ b/docs/docs/tracing/api/how-to.mdx
@@ -184,7 +184,7 @@ print(traces)
 
 ## Logging Traces Asynchronously
 
-When logging traces to an self-hosted MLflow tracking server, MLflow Traces are logged synchronously. This may introduce a performance overhead when logging Traces, especially when your MLflow Tracking Server is running on a remote server. If the performance overhead is a concern for you, you can enable **asynchronous logging** for tracing in MLflow 2.16.0 and later.
+When logging traces to a self-hosted MLflow tracking server, MLflow Traces are logged synchronously. This may introduce a performance overhead when logging Traces, especially when your MLflow Tracking Server is running on a remote server. If the performance overhead is a concern for you, you can enable **asynchronous logging** for tracing in MLflow 2.16.0 and later.
 
 To enable async logging for tracing, call <APILink fn="mlflow.config.enable_async_logging" /> in your code. This will make the trace logging operation non-blocking and reduce the performance overhead.
 
