--- a/docs/docs/mlflow-3/index.mdx
+++ b/docs/docs/mlflow-3/index.mdx
@@ -92,7 +92,7 @@ Respond below:
 prompt = mlflow.register_prompt(
     name="ai_assistant_prompt",
     template=prompt_template,
-    commit_message="Initial version of ai assistant",
+    commit_message="Initial version of AI assistant",
 )
 ```
 Switch to the **Prompts** tab to view the registered prompt:
