--- a/docs/docs/mlflow-3/index.mdx
+++ b/docs/docs/mlflow-3/index.mdx
@@ -281,4 +281,4 @@ MLflow 3.0 introduces some key API changes while also removes some outdated feat
 
 ### Compatibility with MLflow 2.x
 
-We strongly recommend upgrading **both client and server** to MLflow 3.0.0 for the best experience. A mismatch between client and server versions may lead to unexpected behavior.
+We strongly recommend upgrading **both client and server** to MLflow 3.x for the best experience. A mismatch between client and server versions may lead to unexpected behavior.
