--- a/docs/docs/llms/dspy/index.mdx
+++ b/docs/docs/llms/dspy/index.mdx
@@ -182,6 +182,36 @@ print(response)
 }
 ```
 
+The MLflow PythonModel for DSPy supports streaming. To enable streaming, ensure the following conditions are met:
+
+1. Install `dspy` version greater than 2.6.23.
+2. Log your model with a signature.
+3. Ensure all outputs of your model are strings.
+
+```python
+stream_response = model.predict_stream("What kind of bear is best?")
+for output in stream_response:
+    print(output)
+```
+
+```python title="Output"
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": "The"}
+{
+    "predict_name": "prog.predict",
+    "signature_field_name": "reasoning",
+    "chunk": " question",
+}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " of"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " what"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " kind"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " of"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " bear"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " is"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " best"}
+{"predict_name": "prog.predict", "signature_field_name": "reasoning", "chunk": " is"}
+...
+```
+
 To load the DSPy program itself back instead of the PyFunc-wrapped model, use the <APILink fn="mlflow.dspy.load_model" /> function.
 
 ```python
