--- a/docs/docs/mlflow-3/faqs.mdx
+++ b/docs/docs/mlflow-3/faqs.mdx
@@ -55,7 +55,7 @@ experiments/
 
 #### I want to modify `requirements.txt` of my model. How can I do that?
 
-You can modify the `requirements.txt` of your model using <APILink fn="mlflow.models.update_model_requirements" /> to add or remove requirements.
+You can modify `requirements.txt` of your model using <APILink fn="mlflow.models.update_model_requirements" /> to add or remove requirements.
 
 ```python
 import mlflow
